--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -16,6 +16,20 @@
 	flex-direction: row;
 	flex-wrap: wrap;
 	align-self: baseline;
+	width: auto;
+	height: auto;
+}
+
+@media only screen and (max-with: 600px) {
+	.Link {
+		display: flex;
+		margin-right: 10px;
+		flex-direction: row;
+		flex-wrap: wrap;
+		align-self: baseline;
+		width: 25px;
+		height: 25px;
+	}
 }
 .Header {
 	display: flex;
@@ -27,6 +41,8 @@
 }
 
 .Link {
+	height: auto;
+	max-width: 45px;
 	display: flex;
 	padding: 15px;
 	font-size: 150%;
@@ -35,11 +51,4 @@
 	margin-top: 5px;
 	border-radius: 10px;
 	text-decoration: none;
-	width: auto;
-	height: auto;
-}
-
-.login {
-		background-color: aliceblue;
-
 }
