pagination working to show different articles

--- a/src/components/Articles/Articles.module.css
+++ b/src/components/Articles/Articles.module.css
@@ -60,3 +60,12 @@
 .buttons {
 	margin: 5px;
 }
+
+.changePage {
+	display: flex;
+	align-self: center;
+	align-content: center;
+	align-items: center;
+	border-radius: 15px;
+	padding: 5px;
+}
