--- a/src/components/Comments/Comments.module.css
+++ b/src/components/Comments/Comments.module.css
@@ -61,3 +61,16 @@
 .text {
 	text-align: justify;
 }
+.changePage {
+	display: flex;
+	align-self: center;
+	align-content: center;
+	align-items: center;
+	border-radius: 15px;
+	padding: 5px;
+}
+
+.column {
+	display: flex;
+	flex-direction: column;
+}
