--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,6 +1,6 @@
 .foot {
 	display: flex;
-	background-color: #ba1f31;
+	background-color: #a2b9bc;
 	justify-content: space-between;
 	border-radius: 15px;
 	padding: 25px;
