--- a/src/App.css
+++ b/src/App.css
@@ -2,4 +2,6 @@
 	background-color: blanchedalmond;
 	font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
 		"Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+	padding-bottom: 1px;
+	line-height: 1.5em;
 }
