--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,6 +1,6 @@
 .navbar {
 	display: flex;
-	background-color: #ba1f31;
+	background-color: #a2b9bc;
 	justify-content: space-between;
 	border-radius: 15px;
 	padding: 25px;
@@ -14,7 +14,6 @@
 	margin-right: 10px;
 	flex-direction: row;
 	flex-wrap: wrap;
-	/* align-self: baseline; */
 }
 
 @media only screen and (max-width: 600px) {
@@ -31,7 +30,28 @@
 	height: 50px;
 	background-color: black;
 	border-radius: 15px;
-	padding: 15px;
+	padding: 25px;
+}
+@media only screen and (max-width: 350px) {
+	.Header {
+		display: flex;
+		width: auto;
+		height: 25px;
+		background-color: black;
+		border-radius: 15px;
+		padding: 25px;
+	}
+}
+
+@media only screen and (max-width: 200px) {
+	.Header {
+		display: flex;
+		width: auto;
+		height: 15px;
+		background-color: black;
+		border-radius: 15px;
+		padding: 25px;
+	}
 }
 
 .image {
@@ -48,4 +68,18 @@
 	margin: 5px;
 	margin-top: 5px;
 	border-radius: 10px;
+}
+
+.login {
+	display: flex;
+	flex-direction: column;
+}
+
+@media only screen and (max-width: 200px) {
+	.login {
+		display: flex;
+		flex-direction: column;
+		flex-shrink: inherit;
+		width: 15px;
+	}
 }
