--- a/src/components/Pagination/Pagination.module.css
+++ b/src/components/Pagination/Pagination.module.css
@@ -9,7 +9,7 @@
 	width: 100px;
 	height: 50px;
 	border-radius: 15px;
-	background-color: #ff9005;
+	background-color: rgba(105, 255, 230, 0.5), 0.884);
 }
 
 .number {
