making css more neutral

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-	background-color: blanchedalmond;
+	background-color: whitesmoke;
 	font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
 		"Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 	padding-bottom: 1px;
