--- a/src/components/Article/Article.module.css
+++ b/src/components/Article/Article.module.css
@@ -1,5 +1,5 @@
 .article {
-	background-color: #b2ad7f;
+	background-color: #d4d2c2;
 	display: flex;
 	flex-direction: column;
 	flex-wrap: wrap-reverse;
@@ -17,7 +17,7 @@
 
 @media only screen and (max-width: 600px) {
 	.article {
-		background-color: #b2ad7f;
+		background-color: #d4d2c2;
 		display: flex;
 		flex-wrap: wrap-reverse;
 		list-style-type: none;
@@ -34,7 +34,7 @@
 }
 
 .comments {
-	background-color: #6b5b95;
+	background-color: #d4d2c2;
 	display: flex;
 	justify-content: center;
 	list-style-type: none;
@@ -51,7 +51,7 @@
 }
 @media only screen and (max-width: 600px) {
 	.comments {
-		background-color: #6b5b95;
+		background-color: #d4d2c2;
 		display: flex;
 		justify-content: center;
 		list-style-type: none;
