--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -68,6 +68,11 @@
 	margin: 5px;
 	margin-top: 5px;
 	border-radius: 10px;
+	box-shadow: 10px 10px 5px grey;
+}
+
+.link:hover {
+	background-color: aquamarine;
 }
 
 .login {
