--- a/src/components/Comments/Comments.module.css
+++ b/src/components/Comments/Comments.module.css
@@ -13,6 +13,11 @@
 	font-family: sans-serif;
 	line-height: 1.5em;
 	text-align: justify;
+	box-shadow: 5px 5px 1px grey;
+}
+
+.comments:hover {
+	box-shadow: 10px 10px 5px grey;
 }
 
 @media only screen and (max-width: 600px) {
@@ -32,6 +37,7 @@
 		font-family: sans-serif;
 		line-height: 1.5em;
 		text-align: justify;
+		box-shadow: 5px 5px 1px grey;
 	}
 }
 
