--- a/src/components/Articles/Articles.module.css
+++ b/src/components/Articles/Articles.module.css
@@ -10,6 +10,11 @@
 	color: #202829;
 	font-family: sans-serif;
 	line-height: 1.5em;
+	box-shadow: 5px 5px 1px grey;
+}
+
+.article:hover {
+	box-shadow: 10px 10px 5px grey;
 }
 
 @media only screen and (max-width: 600px) {
@@ -25,6 +30,10 @@
 		color: #202829;
 		font-family: sans-serif;
 		line-height: 1.5em;
+		box-shadow: 5px 5px 1px grey;
+	}
+	.article:hover {
+		box-shadow: 10px 10px 5px grey;
 	}
 }
 
